<resources>
    <string name="app_name">SS EduHub</string>
    <string name="welcome_text">Powered By</string>
    <string name="tagline">Your Learning Mate</string>
    <string name="spalsh_text">SS Tutorials in Association With Chauhan Foundation </string>
    <string name="sponsertext">-Hexabex Technologies</string>
    <string name="skip">Skip</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="otp_header_text">Enter 6-digit Verification Code</string>
    <string name="otp_heading_text">The Verification code was sent to this phone number %1$s. Please enter the code.</string>
    <string name="otp_resend">Resend verification code</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_new_confirm_password">Confirm new password</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_comment">Type your comment</string>
    <string name="terms_conditions">I have read and agree to <a href="https://www.google.com">the Terms and Conditions.</a></string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_in_with_facebook">Log in With Facebook</string>
    <string name="log_in_with_google">Log in With Google</string>
    <string name="enter_your_phone_number_to_reset_your_password">Enter your phone number to reset your password.</string>
    <string name="home">Home</string>
    <string name="information">Information</string>
    <string name="transition_image">userImageProfile</string>
    <string name="download">Download</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="search">Search</string>
    <string name="newest_classes">Newest Classes</string>
    <string name="popular_classes">Popular Classes</string>
    <string name="search_tag_text">Popular Tags</string>
    <string name="search_result_text">There are %1$s classes found</string>
    <string-array name="cooking_array">
        <item>Cooking lessons</item>
        <item>Cooking Art</item>
        <item>Cooking at home</item>
        <item>Cooking a good meal</item>
    </string-array>
    <string name="text_placeholder">Placeholder</string>
    <string name="app_setting">App Settings</string>
    <string name="acc_setting">Account Settings</string>
    <string name="search_placeholder">Try "Easy ways write a novel"</string>
    <string name="indicator_bullet">\u25CF</string>
    <string name="bullet">\u2022</string>
    <string name="progress_dialog_text">Wait a few seconds…</string>
    <string name="account_created_successfully">Your account created successfully!</string>
    <string name="no_data_available">No data available.</string>
    <string name="logout">Logout</string>
    <string name="you_want_to_delete">You want to delete <![CDATA[<b><font color=#2C3051>%1$s ?</font></b>]]></string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_password">Edit Password</string>
    <string name="okay">Okay</string>
    <string name="change_password_text">Change your password</string>
    <string name="you_sure_want_to_log_out">You sure want to log out?</string>
    <string name="cellular_data">Cellular Data</string>
    <string name="cellular_data_for_downloads">Cellular Data for Downloads</string>
    <string name="video_quality_for_downloads">Video Quality for Downloads</string>
    <string name="standard_recommended">Standard (Recommended)</string>
    <string name="high_definition">High Definition</string>
    <string name="offline_downloads">Offline Downloads</string>
    <string name="standard_quality_detail">Downloads faster and uses less storage</string>
    <string name="high_definition_detail">Use more storage</string>
    <string name="offline_downloads_detail">Lessons can automatically delete 24 hours after they are watched in full</string>
    <string name="delete_all_downloads">Delete All Downloads</string>
    <string name="delete_all_detail">This will remove all downloaded Lesson videos from your phone.</string>
    <string name="delete_completed_lessons">Delete Completed Lessons</string>
    <string name="favorites">Favorites</string>
    <string name="all_access_pass">All-Access Pass</string>
    <string name="all_access_subtitle">You will get unlimit access to every class you want for a year. All lessons for you auto renews anuualy</string>
    <string name="all_access_price">$499.99/year</string>
    <string name="all_access_button">Get All-Access</string>
    <string name="single_class_label">This Class Only</string>
    <string name="single_class_subtitle">A Good choice for who want to learn a single class for a long time.</string>
    <string name="single_class_button">Purchase This Class</string>
    <string name="single_class_price">$89.99/year</string>
    <string name="institute_country_name">Country</string>
    <string name="institute_country_value">India</string>
    <string name="institute_rating_name">Rating</string>
    <string name="institute_rating_value">2 Star Michels Stars</string>
    <string name="institute_website_name">Website</string>
    <string name="institute_website_value">www.educationalhub.net.in</string>
    <string name="institute_name">Educational Hub</string>
    <string name="read_tutorial">Read Tutorial</string>
    <string name="comments">Comments</string>
    <string name="placeholder">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="your_classes">Your Classes</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="verify">Verify</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="purchased">Purchased</string>
    <string name="lessons">Lessons</string>
    <string name="overview">Overview</string>
    <string name="start_learning">Start Learning</string>
    <string name="take_the_class">Take The Class</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="what_you_will_get">What you will get</string>
    <string name="video_quality">Video Quality</string>
    <string name="categories">Categories</string>
    <string name="institute">Institute</string>
    <string name="view_more">View More ></string>
    <string name="video_quality_title">Video Quality</string>
    <string name="nothing_to_delete">Nothing to delete</string>
    <string name="there_are_no_downloaded_lessons_on_your_devices">There are no downloaded lessons on your devices.</string>
    <string name="write_a_review">Write a review</string>
    <string name="submit">Submit</string>
    <string name="download_over_cellular_network_data_charges_may_apply">Download over cellular network data charges may apply.</string>
    <string name="done">Done</string>
    <string name="please_turn_on_wifi_or_enable_usage_over_cellular_network_from_setting">Please turn on WiFi or enable usage over cellular network from Setting.</string>
</resources>