<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_edupi_main"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.hmatter.first_project.ui.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_search"
            app:destination="@id/nav_search" />
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.hmatter.first_project.ui.fragment.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_nav_search_to_nav_download"
            app:destination="@id/nav_download" />
    </fragment>

    <fragment
        android:id="@id/nav_download"
        android:name="com.hmatter.first_project.ui.fragment.DownloadFragment"
        android:label="@string/download"
        tools:layout="@layout/fragment_download">
        <action
            android:id="@+id/action_nav_download_to_nav_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.hmatter.first_project.ui.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>