<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.SignInActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/lay_toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="@dimen/medium_margin"
            android:hint="@string/hint_username"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/hint_email"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="@id/edUserName"
            app:layout_constraintStart_toStartOf="@id/edUserName"
            app:layout_constraintTop_toBottomOf="@id/edUserName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/hint_phone"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="@id/edUserName"
            app:layout_constraintStart_toStartOf="@id/edUserName"
            app:layout_constraintTop_toBottomOf="@id/edEmail" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/hint_password"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="@id/edUserName"
            app:layout_constraintStart_toStartOf="@id/edUserName"
            app:layout_constraintTop_toBottomOf="@id/edPhone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/hint_confirm_password"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="@id/edPassword"
            app:layout_constraintStart_toStartOf="@id/edPassword"
            app:layout_constraintTop_toBottomOf="@id/edPassword" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chTerms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/terms_conditions"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="@id/edUserName"
            app:layout_constraintStart_toStartOf="@id/edUserName"
            app:layout_constraintTop_toBottomOf="@id/edConfirmPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_margin"
            android:background="@drawable/bg_rounded_btn"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorIntroTitle"
            android:textSize="@dimen/btn_text"
            app:layout_constraintEnd_toEndOf="@id/edUserName"
            app:layout_constraintStart_toStartOf="@id/edUserName"
            app:layout_constraintTop_toBottomOf="@id/chTerms" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>