<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChangePasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:text="@string/change_password_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edOldPasswordLay"
        style="@style/EditTextWhiteStyle"
        android:layout_marginTop="@dimen/medium_margin"
        android:hint="@string/hint_old_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChangePasswordText">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edNewPasswordLay"
        style="@style/EditTextWhiteStyle"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/hint_new_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edOldPasswordLay">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edCnfPasswordLay"
        style="@style/EditTextWhiteStyle"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/hint_new_confirm_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edNewPasswordLay">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edCnfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:backgroundTint="@color/colorGray"
        android:text="@string/cancel"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnOkay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edCnfPasswordLay" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOkay"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/okay"
        android:textColor="@color/colorBlack"
        app:layout_constraintBaseline_toBaselineOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>