<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.activity.SignInActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/lay_toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edUserNameLay"
            style="@style/EditTextStyle"
            android:hint="@string/hint_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edPasswordLay"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edUserNameLay">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/xlarge_margin"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="@id/edUserNameLay"
            app:layout_constraintStart_toStartOf="@id/edUserNameLay"
            app:layout_constraintTop_toBottomOf="@id/edPasswordLay" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="4dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorIntroTitle"
            android:textSize="@dimen/small_text"
            app:layout_constraintStart_toStartOf="@id/tvForgotPassword"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/colorIntroTitle"
            android:textSize="@dimen/small_text"
            app:layout_constraintEnd_toEndOf="@id/edUserNameLay"
            app:layout_constraintStart_toStartOf="@id/edUserNameLay"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/log_in_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/small_text"
            app:backgroundTint="#4460a0"
            app:icon="@drawable/ic_facebook_f"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="@id/edUserNameLay"
            app:layout_constraintStart_toStartOf="@id/edUserNameLay"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/log_in_with_google"
            android:textAllCaps="false"
            android:textColor="@color/colorIntroDetail"
            android:textSize="@dimen/small_text"
            app:backgroundTint="@color/colorWhite"
            app:icon="@drawable/ic_google_g"
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/edUserNameLay"
            app:layout_constraintStart_toStartOf="@id/edUserNameLay"
            app:layout_constraintTop_toBottomOf="@id/btnFb" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>