<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edPasswordLay"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edConfirmPasswordLay"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/hint_confirm_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edPasswordLay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResetPassword"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/xxlarge_margin"
        android:enabled="false"
        android:text="@string/reset_password"
        app:layout_constraintEnd_toEndOf="@id/edPasswordLay"
        app:layout_constraintStart_toStartOf="@id/edPasswordLay"
        app:layout_constraintTop_toBottomOf="@id/edConfirmPasswordLay" />

</androidx.constraintlayout.widget.ConstraintLayout>